--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.2.6",
+    "framer-motion": "^11.2.12",
     "lucide-react": "^0.400.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
